--- a/viewer/index.html
+++ b/viewer/index.html
@@ -82,17 +82,28 @@
       "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
       { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
     ).addTo(map);
-
-    // --- Measurement tool ---
-    const measureControl = new L.Control.Measure({
-      primaryLengthUnit: "meters",
-      secondaryLengthUnit: "kilometers",
-      primaryAreaUnit: "hectares",
-      activeColor: "#2b9348",
-      completedColor: "#ff6600",
-    });
-    measureControl.addTo(map);
-
+  
+    // ✅ Add modern measurement tool
+    // This plugin is compatible with Leaflet 1.9+
+    const measureScript = document.createElement("script");
+    measureScript.src = "https://unpkg.com/leaflet-measure-path@2.2.0/leaflet-measure-path.min.js";
+    document.head.appendChild(measureScript);
+  
+    const measureStyle = document.createElement("link");
+    measureStyle.rel = "stylesheet";
+    measureStyle.href = "https://unpkg.com/leaflet-measure-path@2.2.0/leaflet-measure-path.css";
+    document.head.appendChild(measureStyle);
+  
+    measureScript.onload = () => {
+      L.control.measurePath({
+        showUnitControl: true,
+        measureArea: true,
+        measureDistance: true,
+        activeColor: "#2b9348",
+        completedColor: "#ff6600"
+      }).addTo(map);
+    };
+  
     // --- URL parameter ---
     const params = new URLSearchParams(window.location.search);
     const fileId = params.get("id");
@@ -100,10 +111,10 @@
       alert("❌ Missing KML ID in URL!");
       throw new Error("No ?id= parameter found");
     }
-
+  
     const kmlUrl = `https://cdn.jsdelivr.net/gh/krishnaSureshFor/tnforest_kml_to_grid_v2.0@main/public_kml/${fileId}.kml`;
     console.log("📂 Fetching KML from:", kmlUrl);
-
+  
     // --- Fetch & Load ---
     fetch(kmlUrl, { mode: "cors", cache: "no-cache" })
       .then(res => {
@@ -116,10 +127,10 @@
         const parser = new DOMParser();
         const kml = parser.parseFromString(cleanText, "text/xml");
         const layer = new L.KML(kml);
-
+  
         const gridLayer = L.layerGroup();
         const overlayLayer = L.layerGroup();
-
+  
         // Separate layers based on name
         layer.eachLayer(l => {
           const name = l.feature?.properties?.name || "";
@@ -131,11 +142,11 @@
             gridLayer.addLayer(l);
           }
         });
-
+  
         gridLayer.addTo(map);
         overlayLayer.addTo(map);
-
-        // Add labels for grids
+  
+        // Grid labels
         gridLayer.eachLayer(l => {
           if (l.feature?.properties?.name) {
             const center = l.getBounds().getCenter();
@@ -147,14 +158,14 @@
             }).addTo(map);
           }
         });
-
-        // Layer controls
+  
+        // Layer control
         L.control.layers(null, {
           "Grid Cells": gridLayer,
           "Overlay Boundary": overlayLayer,
         }).addTo(map);
-
-        // Fit bounds
+  
+        // Fit bounds + hide loading
         setTimeout(() => {
           try {
             const bounds = layer.getBounds();
