--- a/viewer/index.html
+++ b/viewer/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Leaflet core -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <!-- Fix for missing L.MultiPolygon -->
@@ -24,12 +21,9 @@
   <!-- Leaflet KML parser -->
   <script src="https://unpkg.com/leaflet-kml@latest/L.KML.js"></script>
 
-  <!-- Leaflet.MeasureControl (modern + compatible) -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/leaflet-measure-control@1.1.0/dist/leaflet-measure-control.min.css"
-  />
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-measure-control@1.1.0/dist/leaflet-measure-control.min.js"></script>
+  <!-- ✅ Leaflet.Measure plugin (compatible & stable) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-measure@3.3.0/dist/leaflet-measure.css" />
+  <script src="https://cdn.jsdelivr.net/npm/leaflet-measure@3.3.0/dist/leaflet-measure.min.js"></script>
 
   <style>
     html, body, #map {
@@ -76,23 +70,21 @@
   <div id="map"></div>
 
   <script>
-    // --- Map setup ---
     const map = L.map("map").setView([11.3, 78.5], 10);
     const base = L.tileLayer(
       "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
       { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
     ).addTo(map);
 
-    // --- Measurement tool (top-right ruler) ---
-    const measureControl = new L.Control.MeasureControl({
-      position: 'topleft',
-      primaryLengthUnit: 'meters',
-      secondaryLengthUnit: 'kilometers',
-      primaryAreaUnit: 'hectares',
-      activeColor: '#2b9348',
-      completedColor: '#ff6600'
-    });
-    map.addControl(measureControl);
+    // ✅ Measurement tool (top-right)
+    L.control.measure({
+      position: "topleft",
+      primaryLengthUnit: "meters",
+      secondaryLengthUnit: "kilometers",
+      primaryAreaUnit: "hectares",
+      activeColor: "#2b9348",
+      completedColor: "#ff6600"
+    }).addTo(map);
 
     // --- Get KML ID ---
     const params = new URLSearchParams(window.location.search);
@@ -117,10 +109,10 @@
         const kml = parser.parseFromString(cleanText, "text/xml");
         const layer = new L.KML(kml);
 
-        // ✅ Keep original colors (no override)
         const gridLayer = L.layerGroup();
         const overlayLayer = L.layerGroup();
 
+        // Separate into groups without modifying style
         layer.eachLayer(l => {
           const name = l.feature?.properties?.name?.toLowerCase() || "";
           if (name.includes("overlay")) overlayLayer.addLayer(l);
@@ -130,22 +122,22 @@
         gridLayer.addTo(map);
         overlayLayer.addTo(map);
 
-        // ✅ Layer toggle control
+        // Add toggle
         L.control.layers(null, {
           "Grid Cells": gridLayer,
           "Overlay Boundary": overlayLayer
         }).addTo(map);
 
-        // ✅ Auto zoom + hide loading
+        // Fit map + hide loader
         setTimeout(() => {
           try {
             const bounds = layer.getBounds();
             if (bounds && bounds.isValid && bounds.isValid()) map.fitBounds(bounds);
           } catch {}
-          const loadBox = document.getElementById("loading");
-          loadBox.style.opacity = "0";
-          setTimeout(() => (loadBox.style.display = "none"), 500);
-        }, 800);
+          const box = document.getElementById("loading");
+          box.style.opacity = "0";
+          setTimeout(() => (box.style.display = "none"), 400);
+        }, 1000);
       })
       .catch(err => {
         console.error("❌ Failed to load KML:", err);
