--- a/viewer/index.html
+++ b/viewer/index.html
@@ -9,29 +9,58 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Patch for missing L.MultiPolygon (safe alias) -->
+  <!-- Patch for MultiPolygon -->
   <script>
     if (typeof L.MultiPolygon === "undefined") {
-      L.MultiPolygon = function(latlngs, options) { return new L.Polygon(latlngs, options); };
+      L.MultiPolygon = function (latlngs, options) {
+        return new L.Polygon(latlngs, options);
+      };
     }
   </script>
 
-  <!-- KML parser -->
+  <!-- Leaflet KML parser -->
   <script src="https://unpkg.com/leaflet-kml@latest/L.KML.js"></script>
 
+  <!-- ✅ Reliable measurement plugin -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-measure@3.3.0/dist/leaflet-measure.css" />
+  <script src="https://cdn.jsdelivr.net/npm/leaflet-measure@3.3.0/dist/leaflet-measure.min.js"></script>
+
   <style>
-    html, body, #map { height: 100%; margin: 0; padding: 0; background: #eef8f0; }
+    html, body, #map {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      background: #ecf8ef;
+    }
     #header {
-      position: absolute; top: 10px; left: 50%; transform: translateX(-50%);
-      background: rgba(255,255,255,0.95); padding: 8px 14px; border-radius: 10px;
-      font-family: Arial, sans-serif; font-weight: 700; color: #226622; z-index: 9999;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+      position: absolute;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.95);
+      padding: 8px 16px;
+      border-radius: 10px;
+      font-family: Arial, sans-serif;
+      font-weight: 600;
+      font-size: 16px;
+      color: #2b9348;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      z-index: 9999;
     }
     #loading {
-      position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);
-      background: rgba(255,255,255,0.96); padding: 18px 30px; border-radius: 10px;
-      font-family: Arial, sans-serif; font-size: 15px; color: #226622; z-index: 9998;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.15); transition: opacity .4s ease;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.95);
+      padding: 18px 36px;
+      border-radius: 12px;
+      font-family: Arial, sans-serif;
+      font-size: 15px;
+      color: #2b9348;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
+      z-index: 9998;
+      transition: opacity 0.4s ease;
     }
     .grid-label { pointer-events: none; }
   </style>
@@ -42,144 +71,81 @@
   <div id="map"></div>
 
   <script>
-  // --------------- CONFIG ---------------
-  const REPO = "krishnaSureshFor/tnforest_kml_to_grid_v2.0";
-  const CDN_PREFIX = "https://cdn.jsdelivr.net/gh";
-  // --------------------------------------
+    const map = L.map("map").setView([11.3, 78.5], 10);
 
-  // Initialize map & basemap
-  const map = L.map("map").setView([11.3, 78.5], 10);
-  const base = L.tileLayer(
-    "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-    { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
-  ).addTo(map);
+    const base = L.tileLayer(
+      "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
+      { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
+    ).addTo(map);
 
-  // Helper to hide loader (safe)
-  function hideLoader() {
-    const el = document.getElementById("loading");
-    if (!el) return;
-    el.style.opacity = "0";
-    setTimeout(()=>el.style.display = "none", 450);
-  }
+    // ✅ Add measurement tool
+    L.control.measure({
+      position: "topleft",
+      primaryLengthUnit: "meters",
+      secondaryLengthUnit: "kilometers",
+      primaryAreaUnit: "hectares",
+      activeColor: "#2b9348",
+      completedColor: "#ff6600"
+    }).addTo(map);
 
-  // Build KML URL using jsDelivr (CORS-safe)
-  const params = new URLSearchParams(window.location.search);
-  const fileId = params.get("id");
-  if (!fileId) {
-    alert("❌ Missing KML ID in URL!");
-    throw new Error("No ?id= parameter found");
-  }
-  const kmlUrl = `${CDN_PREFIX}/${REPO}@main/public_kml/${fileId}.kml`;
-  console.log("📂 Fetching KML from:", kmlUrl);
+    // Loader handler
+    function hideLoader() {
+      const el = document.getElementById("loading");
+      el.style.opacity = "0";
+      setTimeout(() => (el.style.display = "none"), 400);
+    }
 
-  // Dynamically load measurement library (leaflet-measure-path) and its CSS.
-  // We load it but do NOT block the KML loading on it.
-  (function loadMeasureLib() {
-    const css = document.createElement("link");
-    css.rel = "stylesheet";
-    css.href = "https://unpkg.com/leaflet-measure-path@2.2.0/leaflet-measure-path.css";
-    document.head.appendChild(css);
+    // --- Fetch KML ---
+    const params = new URLSearchParams(window.location.search);
+    const fileId = params.get("id");
+    if (!fileId) {
+      alert("❌ Missing KML ID in URL!");
+      throw new Error("No ?id= parameter");
+    }
 
-    const script = document.createElement("script");
-    script.src = "https://unpkg.com/leaflet-measure-path@2.2.0/leaflet-measure-path.min.js";
-    script.onload = function() {
-      try {
-        if (typeof L.control.measurePath === "function") {
-          // add the control when library is ready
-          L.control.measurePath({
-            showUnitControl: true,
-            measureArea: true,
-            measureDistance: true,
-            position: "topleft",
-            activeColor: "#2b9348",
-            completedColor: "#ff6600"
-          }).addTo(map);
-          console.log("📏 Measure tool loaded");
-        } else {
-          console.warn("Measure lib loaded but expected function not found.");
-        }
-      } catch (e) {
-        console.warn("Measure init error:", e);
-      }
-    };
-    script.onerror = function() {
-      console.warn("⚠️ Measurement library failed to load; continuing without measure tool.");
-    };
-    document.head.appendChild(script);
-  })();
+    const kmlUrl = `https://cdn.jsdelivr.net/gh/krishnaSureshFor/tnforest_kml_to_grid_v2.0@main/public_kml/${fileId}.kml`;
+    console.log("📂 Fetching KML from:", kmlUrl);
 
-  // Load KML and display
-  fetch(kmlUrl, { mode: "cors", cache: "no-cache" })
-    .then(res => {
-      console.log("Response status:", res.status);
-      if (!res.ok) throw new Error("HTTP " + res.status);
-      return res.text();
-    })
-    .then(kmlText => {
-      console.log("KML text length:", kmlText.length);
+    fetch(kmlUrl)
+      .then(res => {
+        if (!res.ok) throw new Error("HTTP " + res.status);
+        return res.text();
+      })
+      .then(kmlText => {
+        const clean = kmlText.replace(/<\/*\w+:/g, m => m.replace(/[\w:]+:/, ""));
+        const xml = new DOMParser().parseFromString(clean, "text/xml");
+        const kml = new L.KML(xml);
 
-      // Strip ns prefixes (ns0:) so plugin parses consistently
-      const cleanText = kmlText.replace(/<\/*\w+:/g, m => m.replace(/[\w:]+:/, ""));
-      const parser = new DOMParser();
-      const kml = parser.parseFromString(cleanText, "text/xml");
-      const layer = new L.KML(kml);
+        const gridGroup = L.layerGroup();
+        const overlayGroup = L.layerGroup();
 
-      // separate groups (preserve KML styling)
-      const gridGroup = L.layerGroup();
-      const overlayGroup = L.layerGroup();
+        kml.eachLayer(l => {
+          const name = (l?.feature?.properties?.name ?? "").toString().toLowerCase();
+          if (name.includes("overlay")) overlayGroup.addLayer(l);
+          else gridGroup.addLayer(l);
+        });
 
-      // layer.eachLayer is available after L.KML parse; populate groups
-      layer.eachLayer(function(l) {
-        const name = (l.feature && l.feature.properties && (l.feature.properties.name || "")).toString().toLowerCase();
-        if (name.includes("overlay") || name.includes("boundary")) overlayGroup.addLayer(l);
-        else gridGroup.addLayer(l);
-      });
+        gridGroup.addTo(map);
+        overlayGroup.addTo(map);
 
-      // add groups to map (default both on)
-      gridGroup.addTo(map);
-      overlayGroup.addTo(map);
+        L.control.layers(null, {
+          "Grid Cells": gridGroup,
+          "Overlay Boundary": overlayGroup
+        }).addTo(map);
 
-      // add layer control (user toggles)
-      L.control.layers(null, {
-        "Grid Cells": gridGroup,
-        "Overlay Boundary": overlayGroup
-      }).addTo(map);
-
-      // optional: add small labels for grid features (non-intrusive)
-      gridGroup.eachLayer(function(l) {
-        try {
-          if (l.getBounds && l.feature && l.feature.properties && l.feature.properties.name) {
-            const c = l.getBounds().getCenter();
-            L.marker(c, {
-              icon: L.divIcon({
-                className: "grid-label",
-                html: `<div style="background:rgba(0,0,0,0.6);color:#fff;padding:2px 6px;border-radius:6px;font-size:11px;">${l.feature.properties.name}</div>`,
-                iconSize: null
-              }),
-              interactive: false
-            }).addTo(map);
-          }
-        } catch(e) { /* ignore label errors */ }
-      });
-
-      // fit bounds if available, hide loader reliably
-      setTimeout(() => {
-        try {
-          const bounds = layer.getBounds();
-          if (bounds && bounds.isValid && bounds.isValid()) {
-            map.fitBounds(bounds);
-          }
-        } catch (e) { console.warn("Could not fit bounds:", e); }
+        setTimeout(() => {
+          try {
+            const bounds = kml.getBounds();
+            if (bounds?.isValid()) map.fitBounds(bounds);
+          } catch (e) {}
+          hideLoader();
+        }, 700);
+      })
+      .catch(err => {
+        console.error("❌ Failed to load KML:", err);
         hideLoader();
-      }, 700);
-
-    })
-    .catch(err => {
-      console.error("Failed to load KML:", err);
-      hideLoader();
-      alert("Could not load KML. Check console for details.");
-    });
-
+        alert("⚠️ Could not load KML. Check console for details.");
+      });
   </script>
 </body>
 </html>
